# Proyecto-AED

./: CMakeLists.txt  README.md
GUI/Proyecto01_AED_HojaCalc/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
include/: ColHeader.h  Header.h  Node.h  RowHeader.h  SparseMatrix.h
src/: MainWindow.cpp  MainWindow.h  SparseMatrix.cpp  main.cpp  main_gui.cpp
